# mesh-slicer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: commandLineParser.h  linePlaneIntersectionCache.h  lineUtils.h  meshCreator.h  meshData.h  meshSlicer.h  planeDescriptionSerializer.h  pointTransformer.h  utils.h  wavefrontObjSerializer.h
src/: commandLineParser.cpp  log.cpp  meshData.cpp  meshSlicer.cpp  pointTransformer.cpp
tests/: CMakeLists.txt
tests/src/: empty.test.cpp  empty.tests.cpp  linePlaneIntersectionCache.tests.cpp  meshCreator.tests.cpp  meshDate.tests.cpp  planeDescriptionSerializer.tests.cpp  pointTransformer.tests.cpp  wavefrontObjSerializer.tests.cpp
tests/testData/: plane-description.json
